[package]
name = "hello_rust"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influx_db_client = "0.4.2"

tokio = { version = "0.2", features = ["full"] }

chrono = "0.4.1"

influxdb = { version = "0.1.0", features = ["derive"] }

rayon = "1.4.1"